# PeerIsalnds_Coding_Test

./: .env.example  .gitignore  README.md  cli.py  generate_missing.py  pyproject.toml
.claude/: settings.local.json
output/: domain_knowledge.json  knowledge_extraction.json  package.json
output/src/application/dtos/: create-customer.dto.ts  create-rental.dto.ts  create-store.dto.ts  response-customer.dto.ts  response-rental.dto.ts  response-store.dto.ts  update-customer.dto.ts  update-rental.dto.ts  update-store.dto.ts
output/src/application/use-cases/: add-new-actor.use-case.ts  add-new-customer.use-case.ts  add-new-film.use-case.ts  add-new-staff.use-case.ts  add-new-store.use-case.ts  create-payment.use-case.ts  delete-actor.use-case.ts  delete-customer.use-case.ts  delete-film.use-case.ts  delete-payment.use-case.ts  delete-staff.use-case.ts  delete-store.use-case.ts  manage-actor-list.use-case.ts  manage-customer-list.use-case.ts  manage-film-list.use-case.ts  manage-payment-list.use-case.ts  manage-rental-list.use-case.ts  manage-staff-list.use-case.ts  manage-store-list.use-case.ts  rent-dvd.use-case.ts  return-dvd.use-case.ts  (+8 more)
src/config/: settings.py
src/generators/: base_code_creator.py  llm_code_creator.py
src/graph/: nodes.py  state.py  workflow.py
src/llm/: __init__.py  llm_client_provider.py  llm_domain_extractor.py  llm_prompt_templates.py  llm_token_manager.py
src/models/: domain_models.py  java_models.py
src/parsers/: tree_sitter_parser.py
src/rag/: __init__.py  rag_store.py
tests/: test_analyzers.py  test_llm.py  test_parser.py
(+12 files in other folders)
