[project]
name = "java-nodejs-converter"
version = "0.1.0"
description = "AI-assisted tool to analyze Java codebases, extract domain knowledge, and generate modern Node.js/TypeScript applications"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "SAKILA AI AGENT" }
]
dependencies = [
    # Core framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # Java parsing
    "tree-sitter>=0.22.0",
    "tree-sitter-java>=0.21.0",

    # CLI
    "click>=8.0.0",

    # Utilities
    "tiktoken>=0.7.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",

    # RAG / Vector store
    "chromadb>=0.5.0",
]

[project.scripts]
sakila-agent = "cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
